--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Django==5.1.5
 djangorestframework==3.15.2
 pillow==11.1.0
 django-filter==24.3
+python-dotenv==1.0.1
+djangorestframework-simplejwt==5.4.0
 
