--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==5.1.5
-djangorestframework==3.15.2
 pillow==11.1.0
+drf-yasg==1.21.8
 django-filter==24.3
 python-dotenv==1.0.1
+djangorestframework==3.15.2
 djangorestframework-simplejwt==5.4.0
-
