--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,54 @@
-requests==2.32.3
+amqp==5.3.1
+asgiref==3.8.1
+asttokens==3.0.0
+async-timeout==5.0.1
+billiard==4.2.1
+celery==5.4.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+decorator==5.1.1
 Django==5.1.5
-pillow==11.1.0
-drf-yasg==1.21.8
+django-cors-headers==4.7.0
 django-filter==24.3
-python-dotenv==1.0.1
 django-redis==5.4.0
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.4.0
+djangorestframework_simplejwt==5.4.0
+drf-yasg==1.21.8
+exceptiongroup==1.2.2
+executing==2.2.0
+Faker==36.1.1
+idna==3.10
+inflection==0.5.1
+ipython==8.32.0
+jedi==0.19.2
+kombu==5.4.2
+matplotlib-inline==0.1.7
+packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
+redis==5.2.1
+requests==2.32.3
+six==1.17.0
+sqlparse==0.5.3
+stack-data==0.6.3
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
